starting config server

--- a/api-gateway-server/src/main/resources/application.yml
+++ b/api-gateway-server/src/main/resources/application.yml
@@ -29,6 +29,7 @@ spring:
           uri: lb://msvc-users
           predicates:
             - Path=/api/auth/**
+          filters: [] # no filter applied
 
 logging:
   level:
