--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -37,6 +37,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- Spring Boot Security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 		<!-- Spring Boot Data JPA (si usas JPA/Hibernate) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
