main functionalities implemented, starting with docker

--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
     application:
-        name: msvc-gateway
+        name: eureka-server
     config: 
         import: optional:configserver:http://localhost:8888
