--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,18 @@
         <version>5.10.2</version>
         <scope>test</scope>
       </dependency>
+      <!-- Config -->
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-config</artifactId>
+        <version>4.1.3</version>
+      </dependency>
+      <!-- Actuator -->
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-actuator</artifactId>
+        <version>3.3.4</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <!-- Only add dependencies here if ALL modules need them -->
@@ -103,6 +115,7 @@
         <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
+          <version>3.3.4</version>
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
