--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -89,6 +89,18 @@
         <artifactId>spring-security-test</artifactId>
         <scope>test</scope>
     </dependency>
+
+    <!-- Config -->
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency>
+
+    <!-- Actuator -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
     
   </dependencies>
 
