--- a/api-gateway-server/src/main/resources/application.yml
+++ b/api-gateway-server/src/main/resources/application.yml
@@ -1,5 +1,6 @@
+#to be used by config server
 spring:
     application:
         name: msvc-gateway
     config: 
-        import: optional:configserver:http://localhost:8888
+        import: optional:configserver:http://config-server:8888
