--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	
 	<artifactId>config-server</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 	<name>config-server</name>
 	
 	<properties>
@@ -49,4 +49,19 @@
 		</dependencies>
 	</dependencyManagement>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+				<execution>
+					<goals>
+					<goal>repackage</goal>
+					</goals>
+				</execution>
+				</executions>
+			</plugin>  
+		</plugins>
+	</build>
 </project>
