--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>com.wwun.acme.order</groupId>
 	<artifactId>order-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 	<name>order-service</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -125,6 +125,17 @@
 	
 	<build>
 		<plugins>
+			<plugin>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+			<executions>
+				<execution>
+					<goals>
+					<goal>repackage</goal>
+					</goals>
+				</execution>
+			</executions>
+			</plugin>  
 		</plugins>
 	</build>
 
