--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -10,9 +10,9 @@
         <version>1.0.0</version>
     </parent>
 
-    <artifactId>msvc-users</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>msvc-users</name>
+    <artifactId>user-service</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <name>user-service</name>
     <description>User service for Acme Shop</description>
 
     <dependencies>
@@ -125,4 +125,19 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                        <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>  
+        </plugins>
+    </build>
 </project>
