--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -101,6 +101,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
+
+    <!-- Own Modules -->
+    <dependency>
+      <groupId>com.wwun.acme</groupId>
+      <artifactId>acme-commons</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
     
   </dependencies>
 
