--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -8,7 +8,10 @@ management:
     endpoints:
         web:
             exposure:
-                include: health, info, metrics
+                include: health, info, metrics, prometheus
+    metrics:
+        tags:
+            application: ${spring.application.name}
     endpoint:
         health:
             show-details: always
