--- a/api-gateway-server/src/main/resources/application.yml
+++ b/api-gateway-server/src/main/resources/application.yml
@@ -4,3 +4,7 @@ spring:
         name: msvc-gateway
     config: 
         import: optional:configserver:http://config-server:8888
+
+logging:
+  level:
+    org.springframework.security: DEBUG
