--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
         <artifactId>spring-boot-starter-actuator</artifactId>
         <version>3.3.4</version>
       </dependency>
+      <!-- Swagger -->
+      <dependency>
+        <groupId>org.springdoc</groupId>
+        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        <version>2.5.0</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <!-- Only add dependencies here if ALL modules need them -->
