--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -3,3 +3,18 @@ spring:
         name: msvc-products
     config: 
         import: optional:configserver:http://config-server:8888
+
+management:
+    endpoints:
+        web:
+            exposure:
+                include: health, info, metrics, prometheus
+    metrics:
+        tags:
+            application: ${spring.application.name}
+    endpoint:
+        health:
+            show-details: always
+    info:
+        env:
+            enabled: true
