observability with count registry and aspect timer

--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -11,10 +11,16 @@ management:
                 include: health, info, metrics, prometheus
     metrics:
         tags:
-            application: ${spring.application.name}
+            application: ${spring.application.name} 
+    prometheus:
+        metrics:
+            export:
+                enabled: true
     endpoint:
         health:
             show-details: always
+        prometheus:
+            enabled: true
     info:
         env:
             enabled: true
