--- a/api-gateway-server/pom.xml
+++ b/api-gateway-server/pom.xml
@@ -85,6 +85,13 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <!-- Swagger -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
 		<!-- Own Modules -->
 		<!-- <dependency>
 			<groupId>com.wwun.acme</groupId>
