--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -12,9 +12,15 @@ management:
     metrics:
         tags:
             application: ${spring.application.name}
+    prometheus:
+        metrics:
+            export:
+                enabled: true
     endpoint:
         health:
             show-details: always
+        prometheus:
+            enabled: true
     info:
         env:
             enabled: true
