--- a/prometheus.yml
+++ b/prometheus.yml
@@ -16,3 +16,8 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['order-service:8001']
+
+  - job_name: 'cart-service'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['cart-service:8001']
