--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,9 @@
     <module>api-gateway-server</module>
     <module>product-service</module>
     <module>order-service</module>
-    <module>user-service</module>    
+    <module>user-service</module>
+    <module>cart-service</module>
+    <module>auth-service</module>
   </modules>
   <build>
     <pluginManagement>
