--- a/acme-commons/pom.xml
+++ b/acme-commons/pom.xml
@@ -36,5 +36,9 @@
         <artifactId>jjwt-gson</artifactId>
         <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+    </dependency>
   </dependencies>
 </project>
