--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -47,7 +47,7 @@
     </dependency>
 
     <!-- JPA -->
-    <dependency>
+    <!-- <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
@@ -55,7 +55,7 @@
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
-    </dependency>
+    </dependency> -->
 
     <!-- Validation -->
     <dependency>
@@ -78,6 +78,12 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-openfeign</artifactId>
     </dependency>
+
+    <!-- Circuit braker-->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+		</dependency>
 
    <!-- Tests -->
     <dependency>
