--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -73,6 +73,12 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
         </dependency>
 
+        <!-- Circuit breaker-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+		</dependency>
+
         <!--Own Modules-->
         <dependency>
             <groupId>com.wwun.acme</groupId>
